# netpicker-cli

./: .gitignore  192.168.60.194-399111691140964352.cfg  API_CLIENT_REFACTORING.md  CACHING.md  LICENSE  README.md  README.md.backup  TECHNICAL.md  hostname_search.json  pyproject.toml  sample.json  test_mistral_integration.py
.hypothesis/constants/: 0fd6792429b7e722  1a5f103da79b3429  2046361bdabf6bdd  243296a2c27eda37  247e1cb039e13d14  2e1e35f727bf68fc  351ad9a8d3677f90  3b1afd7ebc71be03  4f6c9a2ea6d52ee1  5d232d225c492486  5de69471387b3659  629855761ab16736  670fb89940bd5e61  6d40992cf2f91dbc  7072ad2158d5eaac  770f6b45f4d06b97  838984d1acd153d6  84d935352c04a6a4  8bce8813d4bf4db7  8ed42a7cb14c2587  9d16839056d95dd4  9da4ff2534caa91a  a10a66e668d22f38  a365b9549bea326d  a5011d00c4ed9eaa  b7b3db96fa5675fc  b83889adac13a893  beeaaaaf367c2343  d6914681b95c211f  ef1ff803fbdf219a  f6ef3f2d60790c28  fdeec0799dbc51f8
examples/: api_client_context_manager.py
src/netpicker_cli/: HTTP_API.md  api_server.py  cli.py
src/netpicker_cli/ai/: __init__.py  router.py
src/netpicker_cli/api/: client.py  errors.py
src/netpicker_cli/commands/: ai.py  auth.py  automation.py  backups.py  compliance.py  compliance_policy.py  devices.py  health.py  whoami.py
src/netpicker_cli/mcp/: README.md  __init__.py  server.py
src/netpicker_cli/utils/: config.py  files.py
tests/: TEST_INFRASTRUCTURE_SUMMARY.md  test_ai_routing.py  test_devices_delete.py  test_devices_list.py  test_health.py  test_mcp_server.py  test_parameter_extraction.py
tests/integration/: test_ai_routing.py  test_edge_cases.py
tests/unit/: test_callbacks.py  test_edge_cases.py
