[project]
name = "netpicker-cli"
version = "0.1.0"
description = "Netpicker CLI — backups, config history, search, upload, run"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Netpicker Team", email="support@netpicker.io"}]
dependencies = [
  "typer>=0.12.5",
  "rich>=13.7.1",
  "httpx>=0.27",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
]
[project.scripts]
npbk = "npbk.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
