[project]
name = "netpicker-cli"
version = "0.1.0"
description = "NetPicker CLI for devices and backups"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Netpicker Team", email = "support@netpicker.io" }]
dependencies = [
  "typer>=0.12.5",
  "httpx>=0.27",
  "pydantic>=2.8",
  "keyring>=25.2.1",
  "python-dotenv>=1.0.1",
  "tabulate>=0.9.0",
]

[project.scripts]
netpicker = "netpicker_cli.cli:app"
